@@ -3,6 +3,9 @@
 ## Erlang/OTP applications as internal CloudI services
 
 * `hello_world1` - Using CloudI configuration or the CloudI Service API
+
+## Embedding CloudI in other Erlang/OTP applications
+
 * `hello_world2` - Including CloudI in your Erlang OTP/reltool release
 * `hello_world3` - Including CloudI as a rebar dependency
 * `hello_world4` - Including CloudI as a relx release
