@@ -24,6 +24,8 @@
   {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                       "^erts.*/(doc|info|include|lib|man|src)"]},
   {app, hipe, [{incl_cond, exclude}]},
+  {app, cloudi_service_api_requests, [{incl_cond, include}]},
+  {app, cloudi_service_http_cowboy, [{incl_cond, include}]},
   {app, hello_world3,
    [{mod_cond, app}, {incl_cond, include},
     {lib_dir, "apps/hello_world3"}]}
