@@ -1,6 +1,14 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-01-02 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add cloudi_service:key_value_find/2 to provide an generic interface
+      for accessing the RequestInfo key/value pairs
+    * Update the examples to provide more details and fix a few
+      release problems
+    * Update dynamic_compile
+
 2014-01-01 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix cloudi_service_quorum timeout bug
